<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*">

    <TableRow>
        <TextView
        android:text="@string/open"
            android:gravity="left"
        android:padding="3dip"/>
        <TextView
            android:text="@string/openKey"
            android:gravity="right"
            android:padding="3dip"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/save"
            android:gravity="left"
            android:padding="3dip"/>
        <TextView
            android:text="@string/saveKey"
            android:gravity="right"
            android:padding="3dip"/>
    </TableRow>

    <TableRow>
        <TextView
            android:text="@string/saveAs"
            android:gravity="left"
            android:padding="3dip"/>
        <TextView
            android:text="@string/saveAsKey"
            android:gravity="right"
            android:padding="3dip"/>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#696969" />

    <TableRow>
        <TextView
            android:text="@string/aimport"
            android:gravity="left"
            android:padding="3dip"/>
    </TableRow>


    <TableRow>
        <TextView
            android:text="@string/aexport"
            android:gravity="left"
            android:padding="3dip"/>
        <TextView
            android:text="@string/aexportKey"
            android:gravity="right"
            android:padding="3dip"/>
    </TableRow>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="#696969" />

    <TableRow>
        <TextView
            android:text="@string/quit"
            android:gravity="left"
            android:padding="3dip"/>
    </TableRow>

</TableLayout>
